fix gap managment section

--- a/src/scss/components/management-section.scss
+++ b/src/scss/components/management-section.scss
@@ -1,5 +1,5 @@
 .management-section {
-  margin-bottom: 42px;
+  margin-bottom: 79px;
   @include media('<tablet'){
     margin-bottom: 41px;
   }
